--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Codecrafters <hello@codecrafters.io>"]
 edition = "2021"
 rust-version = "1.80"
 
+[lib]
+name = "codecrafters_kafka"
+
 [dependencies]
 anyhow = "1.0.68"    # error handling
 bytes = "1.3.0"      # helps manage buffers
