--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = "1.80"
 name = "codecrafters_kafka"
 
 [dependencies]
-anyhow = "1.0.68"    # error handling
-bytes = "1.3.0"      # helps manage buffers
-thiserror = "1.0.38" # error handling
+anyhow = "1.0.68"                                                     # error handling
+bytes = "1.3.0"                                                       # helps manage buffers
+strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
+thiserror = "1.0.38"                                                  # error handling
